CKA/Live/ex5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ex5
  name: ex5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ex5
  template:
    metadata:
      labels:
        app: ex5
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
        volumeMounts:
        - name: volume
          mountPath: /volume
      volumes:
      - name: volume
        emptyDir: {}
